--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "json-server": "^0.17.4",
-    "json-server-auth": "^2.1.0"
+    "json-server-auth": "^2.1.0",
+    "nodemon": "^1.18.10"
   }
 }
